<resources>
    <string name="app_name">MINAP Data Entry</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="yes">Yes</string>
	<string name="no">No</string>
    <string name="legal_label">Legal Disclaimer</string>
    <string name="legal_contents">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.

Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions.
\n \n
Completely synergize resource sucking relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.
\n \n
Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains. Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.</string>
    <string name="accept">Accept</string>
    <string name="close">Close</string>
    <string name="login">Log in</string>
    <string name="login_label_username">Username</string>
    <string name="login_hint_username">username</string>
    <string name="login_label_password">Password</string>
    <string name="login_hint_password">password</string>
    <string name="title_patient_details">Patient Details</string>
    <string name="value_label_name">Name</string>
    <string name="value_hint_first_name">First name</string>
    <string name="value_hint_surname">Surname</string>
    <string name="value_label_hospital_number">Hospital case record number</string>
    <string name="value_hint_hospital_number">Hospital CRN</string>
    <string name="value_label_nhs_number">NHS Number</string>
    <string name="value_hint_nhs_number">NHS number</string>
    <string name="value_label_date_of_birth">Date of birth</string>
    <string name="value_date_picker_title_date_of_birth">Date of birth:</string>
    <string name="value_hint_date_of_birth">e.g. 10 April 1990</string>
    <string name="value_label_admission_date_time">Admission Date/Time</string>
    <string name="value_date_picker_title_admission_date">Admission date:</string>
    <string name="value_hint_admission_date">e.g. 1 Jan 2014</string>
    <string name="value_time_picker_title_admission_time">Admission time:</string>
    <string name="value_hint_admission_time">e.g. 12:34 PM</string>
    <string name="value_label_hospital">Hospital</string>
    <string name="confirm">Confirm</string>
    <string name="button_about_value">information</string>
    <string name="next_page">Next</string>
    <string name="previous_page">Back</string>
    <string name="value_hint_date">date</string>
    <string name="value_hint_time">time</string>
	<string name="value_label_working_diagnosis">What is your working diagnosis?</string>
	<string name="value_radio_working_diagnosis_1">1. Definite myocardial infarction</string>
	<string name="value_radio_working_diagnosis_3">3. Acute coronary syndrome</string>
	<string name="value_radio_working_diagnosis_4">4. Chest pain ? cause</string>
	<string name="value_radio_working_diagnosis_5">5. Other initial diagnosis</string>
	<string name="value_label_astemi_admission">Admission after treatment for STEMI elsewhere?</string>
    <string name="value_label_select_initial_reperfusion_treatment">Select Initial Reperfusion Treatment</string>
	<string name="value_radio_initial_reperfusion_treatment_0">0. None</string>
	<string name="value_radio_initial_reperfusion_treatment_1">1. Thrombolytic treatment</string>
    <string name="value_radio_initial_reperfusion_treatment_2">2. pPCI in house</string>
	<string name="value_radio_initial_reperfusion_treatment_3">3. Referred for consideration for pPCI elsewhere</string>
	<string name="value_radio_initial_reperfusion_treatment_4">4. pPCI already was performed at the interventional hospital</string>
	<string name="value_radio_initial_reperfusion_treatment_9">9. Unknown</string>
    <string name="title_warning_angiography">Do not use this page for details of Primary PCI</string>
    <string name="value_label_was_angiography_performed">Was angiography performed during this Admission?</string>
    <string name="value_radio_angiography_performed_1">1. Protocol driven investigation performed in this hospital</string>
    <string name="value_radio_angiography_performed_2">2. Symptom driven investigation performed in this hospital</string>
    <string name="value_radio_angiography_performed_3">3. Protocol driven investigation performed at another hospital</string>
    <string name="value_radio_angiography_performed_4">4. Symptom driven investigation performed at another hospital</string>
    <string name="value_radio_angiography_performed_5">5. Planned after discharge</string>
    <string name="value_radio_angiography_performed_6">6. Not applicable</string>
    <string name="value_radio_angiography_performed_7">7. Patient refused</string>
    <string name="value_radio_angiography_performed_8">8. Not performed</string>
    <string name="value_radio_angiography_performed_9">9. Unknown</string>
    <string name="value_label_datetime_referral_investigation_intervention">Date/time of Referral for Investigation/Intervention</string>
    <string name="value_label_delay_to_performance_angiogram">Delay to Performance of Angiogram</string>
</resources>