<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    
	<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    	<TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/value_label_name"
		    style="?android:listSeparatorTextViewStyle"
	    	/>
	    <EditText 
	        android:id="@+id/first_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/value_hint_first_name"
	        android:singleLine="true"
	        android:inputType="textNoSuggestions|textPersonName|textCapWords"
	        android:imeOptions="flagNoExtractUi"
	        android:maxLength="35"
			/>
	    <EditText 
	        android:id="@+id/surname"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/value_hint_surname"
	        android:singleLine="true"
	        android:inputType="textNoSuggestions|textPersonName|textCapWords"
	        android:imeOptions="flagNoExtractUi"
	        android:maxLength="35"
			/>
	    
	    <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/value_label_hospital_number"
		    style="?android:listSeparatorTextViewStyle"
		    android:layout_marginTop="16dp"
	    	/>
	    <EditText 
			android:inputType="number"
		    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/value_hint_hospital_number"
	        android:imeOptions="flagNoExtractUi"
			/>
	    
	    <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/value_label_nhs_number"
		    style="?android:listSeparatorTextViewStyle"
		    android:layout_marginTop="16dp"
	    	/>
	    <EditText 
	        android:id="@+id/nhs_number"
	        android:inputType="number"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/value_hint_nhs_number"
	        android:drawableLeft="@drawable/ic_action_error"
	        android:maxLength="10"
	        android:imeOptions="flagNoExtractUi"
			/>
	    
	    <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/value_label_date_of_birth"
		    style="?android:listSeparatorTextViewStyle"
		    android:layout_marginTop="16dp"
	    	/>
	    <TextView 
	        android:id="@+id/date_of_birth"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@android:style/Widget.DeviceDefault.Light.Spinner"
			/>
	    
	    <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/value_label_admission_date_time"
		    style="?android:listSeparatorTextViewStyle"
		    android:layout_marginTop="16dp"
	    	/>
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <TextView 
		        android:id="@+id/admission_date"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
		        android:nextFocusDown="@+id/admission_time" 
		        style="@android:style/Widget.DeviceDefault.Light.Spinner"
				/>
		    <TextView 
		        android:id="@+id/admission_time"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5" 
		        style="@android:style/Widget.DeviceDefault.Light.Spinner"
				/>
	    </LinearLayout>
	    
	    <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/value_label_hospital"
		    style="?android:listSeparatorTextViewStyle"
		    android:layout_marginTop="16dp"
	    	/>
	    <Spinner 
	        android:id="@+id/hospitals_spinner"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        />
	</LinearLayout>
	
	<Button
         android:id="@+id/confirm_button"
         android:text="@string/confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         />
    
</LinearLayout>
</ScrollView>
