<?xml version="1.0" encoding="utf-8"?>
<com.ucl.appteam7.minapmobile.views.InitialReperfusionView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

 	<LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
    	android:paddingRight="16dp"
        android:orientation="vertical"
        android:animateLayoutChanges="true" >
        
      <LinearLayout 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="2dp">
           <!-- add in a margin to give space for the about button -->
           <TextView
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:text="@string/value_label_select_initial_reperfusion_treatment"
			    style="?android:listSeparatorTextViewStyle"
			    android:layout_weight="1"
		    	/>
 
	  </LinearLayout>
            
	        <RadioGroup
	            android:id="@+id/radio_group_initial_reperfusion_treatment"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical">
			    <RadioButton
			        android:id="@+id/radio_initial_reperfusion_treatment_0"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/value_radio_initial_reperfusion_treatment_0"
				  	/>
			    <RadioButton
			        android:id="@+id/radio_initial_reperfusion_treatment_1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/value_radio_initial_reperfusion_treatment_1"
				  	/>
			    <RadioButton
			        android:id="@+id/radio_initial_reperfusion_treatment_2"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/value_radio_initial_reperfusion_treatment_2"
				  	/>
			    <RadioButton
			        android:id="@+id/radio_initial_reperfusion_treatment_3"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/value_radio_initial_reperfusion_treatment_3"
				  	/>
			    <RadioButton
			        android:id="@+id/radio_initial_reperfusion_treatment_4"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/value_radio_initial_reperfusion_treatment_4"
				  	/>
			    <RadioButton
			        android:id="@+id/radio_initial_reperfusion_treatment_9"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/value_radio_initial_reperfusion_treatment_9"
				  	/>
			</RadioGroup>

        <!-- page navigation buttons -->
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_vertical">	
		    <Button
	         android:id="@+id/previous_page_button"
	         android:text="@string/previous_page"
	         android:layout_width="0dip"
	         android:layout_weight="1.0"
	         android:layout_height="wrap_content"
	         android:layout_marginTop="8dp"
	         android:layout_marginBottom="8dp"
	         android:drawableLeft="@drawable/ic_action_previous_item"
	         />
			<Button
	         android:id="@+id/next_page_button"
	         android:text="@string/next_page"
	         android:layout_width="0dip"
	         android:layout_weight="1.0"
	         android:layout_height="wrap_content"
	         android:layout_marginTop="8dp"
	         android:layout_marginBottom="8dp"
	         android:drawableRight="@drawable/ic_action_next_item"
	         />
		</LinearLayout>
    </LinearLayout>
    

</com.ucl.appteam7.minapmobile.views.InitialReperfusionView>
