<?xml version="1.0" encoding="utf-8"?>
<com.ucl.appteam7.minapmobile.views.AngiographyView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

 	<LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
    	android:paddingRight="16dp"
        android:orientation="vertical"
        android:animateLayoutChanges="true" >
        
        <LinearLayout 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
	 	    <TextView 
	 	        android:layout_width="0dip"
	 	        android:layout_height="wrap_content"
	 	        android:text="@string/title_warning_angiography"
	 	        android:drawableLeft="@drawable/ic_action_warning"
	 	        android:drawablePadding="4dp"
	 	        android:layout_marginTop="16dp"
	 	        android:layout_weight="1"
	 	        />
           <ImageButton
               android:id="@+id/about_warning_angiography"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:contentDescription="@string/button_about_value"
               android:src="@drawable/ic_action_about" 
               android:background="@drawable/button_about_value"
               android:layout_gravity="bottom"
	           android:layout_marginBottom="1dp"/>
 	    </LinearLayout>
 	    
        <LinearLayout 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
          
           <TextView
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:text="@string/value_label_was_angiography_performed"
			    style="?android:listSeparatorTextViewStyle"
			    android:layout_marginTop="16dp"
			    android:layout_weight="1"
		    	/>

		</LinearLayout>
		
		<RadioGroup
		    android:id="@+id/radio_group_was_angiography_performed"
		    android:layout_width="match_parent"
		    android:layout_height="0dip"
		    android:orientation="horizontal"
		    android:layout_weight="1.0">
			 <!-- the weight 1.0 is to ensure the buttons are at the bottom of the screen -->
			 <!-- it's a bit of hack, and won't work if the layout inflated below isn't big enough -->
		    <RadioButton
		        android:id="@+id/radio_was_angiography_performed_yes"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/yes"
			  	/>
		    <RadioButton
		        android:id="@+id/radio_was_angiography_performed_no"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/no"
				/>
		</RadioGroup>

        <!-- page navigation buttons -->
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_vertical">	
		    <Button
	         android:id="@+id/previous_page_button"
	         android:text="@string/previous_page"
	         android:layout_width="0dip"
	         android:layout_weight="1.0"
	         android:layout_height="wrap_content"
	         android:layout_marginTop="8dp"
	         android:layout_marginBottom="8dp"
	         android:drawableLeft="@drawable/ic_action_previous_item"
	         />
			<Button
	         android:id="@+id/next_page_button"
	         android:text="@string/next_page"
	         android:layout_width="0dip"
	         android:layout_weight="1.0"
	         android:layout_height="wrap_content"
	         android:layout_marginTop="8dp"
	         android:layout_marginBottom="8dp"
	         android:enabled="false"
	         android:drawableRight="@drawable/ic_action_next_item"
	         />
		</LinearLayout>
    </LinearLayout>
    

</com.ucl.appteam7.minapmobile.views.AngiographyView>
